--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,10 +1,6 @@
 name = "finanzsim"
 compatibility_date = "2025-12-01"
+pages_build_output_dir = "dist"
 
 [ai]
 binding = "AI"
-
-[[pages]]
-name = "finanzsim"
-build_command = "npm run build"
-build_output_dir = "dist"
